[package]
name = "webserver"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["TypedDuck <typedduck@posteo.net>"]
homepage = "https://github.com/typedduck/webserver"
repository = "https://github.com/typedduck/webserver"
description = "Webserver for static website"
categories = ["web-programming::http-server"]
keywords = ["http", "server", "static", "website"]
readme = "README.md"
include = ["LICENSE-*", "README.md", "CHANGELOG.md", "Cargo.toml", "/src"]

[lints.clippy]
pedantic = "warn"
cargo = "warn"
style = "warn"
complexity = "warn"
perf = "warn"
correctness = "warn"
suspicious = "warn"
nursery = "warn"

[profile.release]
strip = true
opt-level = "s"
lto = true
overflow-checks = false
incremental = false
codegen-units = 1

[features]
default = []
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus"]

[dependencies]
axum = "0.8.3"
metrics = { version = "0.24.1", default-features = false, optional = true }
metrics-exporter-prometheus = { version = "0.16.2", default-features = false, optional = true }
tokio = { version = "1.44.0", features = [
    "rt-multi-thread",
    "macros",
    "signal",
] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs", "timeout", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
